--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "expo-linking": "~7.0.5",
-    "expo-constants": "~17.0.8"
+    "expo-constants": "~17.0.8",
+    "expo-image": "~2.0.6",
+    "expo-image-picker": "~16.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
