--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "expo": "~52.0.38",
+    "expo-constants": "~17.0.8",
+    "expo-image": "~2.0.6",
+    "expo-image-picker": "~16.0.6",
+    "expo-linking": "~7.0.5",
+    "expo-media-library": "~17.0.6",
+    "expo-router": "~4.0.18",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "expo-router": "~4.0.18",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "expo-linking": "~7.0.5",
-    "expo-constants": "~17.0.8",
-    "expo-image": "~2.0.6",
-    "expo-image-picker": "~16.0.6"
+    "react-native-view-shot": "~4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
